# elacsym

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  config.toml  test_api.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
benches/: vector_search.rs
configs/: namespace.sample.toml  query-node.sample.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/bitmap/: Cargo.toml
crates/bitmap/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/compactor/: Cargo.toml
crates/compactor/src/: lib.rs
crates/elax-api/: Cargo.toml
crates/elax-api/src/: lib.rs
crates/elax-api/tests/: phase1_flow.rs
crates/elax-cache/: Cargo.toml
crates/elax-cache/src/: lib.rs
crates/elax-cli/: Cargo.toml
crates/elax-cli/src/: main.rs
crates/elax-config/: Cargo.toml
crates/elax-config/src/: lib.rs
crates/elax-core/: Cargo.toml
crates/elax-core/src/: lib.rs
crates/elax-erq/: Cargo.toml
crates/elax-erq/proptest-regressions/: lib.txt
crates/elax-erq/src/: lib.rs
crates/elax-filter/: Cargo.toml
crates/elax-filter/src/: lib.rs
crates/elax-fts/: Cargo.toml
crates/elax-fts/src/: directory.rs  language.rs  lib.rs
crates/elax-indexer/: Cargo.toml
crates/elax-indexer/src/: lib.rs
crates/elax-ivf/: Cargo.toml
crates/elax-ivf/src/: lib.rs
crates/elax-metrics/: Cargo.toml
crates/elax-metrics/src/: lib.rs
crates/elax-store/: Cargo.toml
crates/elax-store/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
crates/part_builder/: Cargo.toml
crates/part_builder/src/: lib.rs
crates/quant/: Cargo.toml
crates/quant/src/: lib.rs
crates/rerank/: Cargo.toml
crates/rerank/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/text/: Cargo.toml
crates/text/src/: lib.rs
docs/: CHANGELOG.md  DESIGN.md  DISTRIBUTED_ARCHITECTURE.md  DISTRIBUTED_ARCHITECTURE_V2.md  ERROR_RECOVERY.md  FULLTEXT_COMPARISON.md  PHASE_3_PLAN.md  README.md  SCHEMA_BEHAVIOR.md  SESSION_5_SUMMARY.md  SESSION_6_SUMMARY.md  SESSION_7_SUMMARY.md  SESSION_8_SUMMARY.md  api-reference.md  architecture.md  configuration.md  deployment.md  design-decisions.md  design.md  performance.md  phase1.md
docs/runbooks/: backfill.md  cache_pinning.md  developer_onboarding.md  fts_language_packs.md  recall_drift.md
examples/: basic_usage.rs  rabitq_test.rs
examples/distributed/: .env.example  README.md  config-indexer.toml  config-query.toml  docker-compose.yml  nginx.conf
examples/distributed/k8s/: indexer-statefulset.yaml  ingress.yaml  query-deployment.yaml  service.yaml
src/: config.rs  error.rs  lib.rs  main.rs  sharding.rs  types.rs
src/api/: handlers.rs  mod.rs  state.rs
src/cache/: mod.rs
src/index/: fulltext.rs  mod.rs  vector.rs
src/manifest/: mod.rs
src/namespace/: compaction.rs  mod.rs
src/query/: executor.rs  fusion.rs  mod.rs
src/segment/: mod.rs
src/storage/: local.rs  mod.rs  s3.rs
src/wal/: mod.rs  s3.rs
tests/: compaction_test.rs  config_validation_test.rs  fulltext_analyzer_test.rs  integration_test.rs  multi_node_test.rs  wal_error_recovery_test.rs  wal_recovery_test.rs
