[workspace]
members = [
    "crates/elax-api",
    "crates/elax-core",
    "crates/elax-store",
    "crates/elax-indexer",
    "crates/elax-ivf",
    "crates/elax-erq",
    "crates/elax-fts",
    "crates/elax-filter",
    "crates/elax-cache",
    "crates/elax-metrics",
    "crates/elax-cli",
    "crates/elax-config",
    "bin/query-node",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.0.0"
authors = ["elacsym contributors"]
rust-version = "1.77"

[workspace.dependencies]
object_store = { version = "0.7", default-features = false, features = ["aws", "gcp", "http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
toml = "0.8"
zstd-sys = "=2.0.1"

[patch.crates-io]
zstd-safe = { path = "third_party/zstd-safe" }

[workspace.metadata]
organization = "elacsym"

