[package]
name = "compactor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
tracing.workspace = true
common = { path = "../common" }
manifest = { path = "../manifest" }
part_builder = { path = "../part_builder" }
bitmap = { path = "../bitmap" }
storage = { path = "../storage" }
