[package]
name = "elax-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["macros"] }
elax-core = { path = "../elax-core" }

[dev-dependencies]
tower = "0.4"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
