[package]
name = "elax-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["macros"] }
elax-core = { path = "../elax-core" }
elax-store = { path = "../elax-store" }
elax-metrics = { path = "../elax-metrics" }
elax-filter = { path = "../elax-filter" }
metrics = "0.21"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
base64 = "0.21"
