[package]
name = "elax-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
elax-indexer = { path = "../elax-indexer" }
elax-store = { path = "../elax-store" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
