[package]
name = "elax-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
object_store = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
