[package]
name = "elax-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
elax-store = { path = "../elax-store" }
elax-filter = { path = "../elax-filter" }
serde_json = "1"
metrics = "0.21"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
