[package]
name = "elax-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
arrow-array = "53"
arrow-schema = "53"
bytes = "1"
futures = "0.3"
object_store = { workspace = true }
parquet = { version = "53", default-features = false, features = ["arrow", "zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "io-util"] }

[dev-dependencies]
proptest = "1"
