[package]
name = "index"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
tracing.workspace = true
common = { path = "../common" }
manifest = { path = "../manifest" }
quant = { path = "../quant" }
bitmap = { path = "../bitmap" }
