[package]
name = "index"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
common = { path = "../common" }
quant = { path = "../quant" }
bitmap = { path = "../bitmap" }
rerank = { path = "../rerank" }

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
part_builder = { path = "../part_builder" }
