[package]
name = "part_builder"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
common = { path = "../common" }
quant = { path = "../quant" }
storage = { path = "../storage" }
