[package]
name = "storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
bytes.workspace = true
opendal.workspace = true
tokio.workspace = true
tracing.workspace = true
common = { path = "../common" }
